--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	
+	<link rel="stylesheet" href="css/style.css">
+
+	<link href="http://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet" type="text/css">
+
+	<link rel="stylesheet" href="css/normalize.css">
+	<script src="js/modernizr.custom.60251.js"></script>
+
+	<link rel="shortcut icon" href="cross.gif">
+	<title>Jugo Gato IA</title>
 </head>
 <body>
 	
