Funciones para manejar el tablero

--- a/index.html
+++ b/index.html
@@ -14,6 +14,48 @@
 	<title>Jugo Gato IA</title>
 </head>
 <body>
-	
+	<div id="content">
+
+		<div id="game">
+
+			<div id="title">
+				<h1>Juego Gato IA</h1>
+			</div>
+
+			<div id="content_board">
+
+				<div id="board">
+
+					<div id="rows">
+
+						<div class="row">
+							<div id="c02" class="cell"></div>
+							<div id="c12" class="cell"></div>
+							<div id="c22" class="cell"></div>
+						</div>
+
+						<div class="row">
+							<div id="c01" class="cell"></div>
+							<div id="c11" class="cell"></div>
+							<div id="c21" class="cell"></div>
+						</div>
+
+						<div class="row">
+							<div id="c00" class="cell"></div>
+							<div id="c10" class="cell"></div>
+							<div id="c20" class="cell"></div>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+	<script src="js/autoplay.js"></script>
 </body>
 </html>
