--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 					<div id="rows">
 
 						<div class="row">
-							<div id="c02" class="cell"></div>
-							<div id="c12" class="cell"></div>
-							<div id="c22" class="cell"></div>
+							<div id="c02" class="cell" onClick="SelectCell(0,2)"></div>
+							<div id="c12" class="cell" onClick="SelectCell(1,2)"></div>
+							<div id="c22" class="cell" onClick="SelectCell(2,2)"></div>
 						</div>
 
 						<div class="row">
-							<div id="c01" class="cell"></div>
-							<div id="c11" class="cell"></div>
-							<div id="c21" class="cell"></div>
+							<div id="c01" class="cell" onClick="SelectCell(0,1)"></div>
+							<div id="c11" class="cell" onClick="SelectCell(1,1)"></div>
+							<div id="c21" class="cell" onClick="SelectCell(2,1)"></div>
 						</div>
 
 						<div class="row">
-							<div id="c00" class="cell"></div>
-							<div id="c10" class="cell"></div>
-							<div id="c20" class="cell"></div>
+							<div id="c00" class="cell" onClick="SelectCell(0,0)"></div>
+							<div id="c10" class="cell" onClick="SelectCell(1,0)"></div>
+							<div id="c20" class="cell" onClick="SelectCell(2,0)"></div>
 						</div>
 
 					</div>
@@ -56,6 +56,7 @@
 
 	</div>
 
+	<script src="js/smart.js"></script>
 	<script src="js/autoplay.js"></script>
 </body>
 </html>
